# textcase

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: casing.rs  german.rs  lookup.rs  plugin_loading.rs
crates/textcase/: Cargo.toml  README.md
crates/textcase-cli/: Cargo.toml  README.md
crates/textcase-cli/src/: checksum.rs  cli.rs  fsutil.rs  main.rs  manifest.rs
crates/textcase-cli/src/cmd/: build_plugin.rs  fetch.rs  inspect_plugin.rs  list_sources.rs  mod.rs  prepare.rs  show_license.rs
crates/textcase-cli/src/prepare/: canonical_map.rs  fst_build.rs  mod.rs  multiword_map.rs  normalize.rs  ranked.rs
crates/textcase-cli/src/sources/: cldr.rs  dbpedia.rs  discogs.rs  geonames.rs  getty.rs  gleif.rs  gnd.rs  mod.rs  musicbrainz.rs  natural_earth.rs  omw.rs  openstreetmap.rs  orcid.rs  ror.rs  ud_german_gsd.rs  wikidata.rs  wiktionary.rs
crates/textcase-cli/tests/: cli.rs
crates/textcase/benches/: casing.rs  german.rs  lookup.rs  plugin_loading.rs
crates/textcase/benches/support/: mod.rs
crates/textcase/examples/: basic_sentence_case.rs  german_balanced.rs  load_fst_plugin.rs  load_json_plugin.rs  sentence_case_title.rs  subtitle_separator_normalization.rs
crates/textcase/src/: analysis.rs  config.rs  error.rs  lib.rs  util.rs
crates/textcase/src/case/: mod.rs  normalize.rs  sentence.rs  subtitle.rs  title.rs
crates/textcase/src/icu/: casing.rs  mod.rs  segmentation.rs
crates/textcase/src/lang/: azerbaijani.rs  danish.rs  dutch.rs  english.rs  finnish.rs  french.rs  italian.rs  lithuanian.rs  mod.rs  norwegian.rs  portuguese.rs  profile.rs  spanish.rs  swedish.rs  turkish.rs
crates/textcase/src/lang/german/: ambiguity.rs  contexts.rs  heuristics.rs  mod.rs  rules.rs
crates/textcase/src/lexicon/: builtin.rs  fst.rs  json.rs  mod.rs  plugin.rs  prepared.rs  traits.rs
crates/textcase/src/plugin/: inspect.rs  metadata.rs  mod.rs  schema.rs
crates/textcase/src/tokenize/: boundaries.rs  mod.rs  token.rs  tokenizer.rs
crates/textcase/tests/: integration.rs
docs/: README.md  architecture.md  german.md  licensing-policy.md  performance.md  plugin-format.md  sources.md
examples/: german_balanced.rs  load_fst_plugin.rs  load_json_plugin.rs  sentence_case_title.rs  subtitle_separator_normalization.rs
tests/fixtures/: wikidata-sample.json
