[workspace]
members = ["crates/textcase", "crates/textcase-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
textcase = { path = "crates/textcase" }
clap = { version = "4.5.39", features = ["cargo", "derive", "wrap_help"] }
fst = "0.4.7"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
unicode-segmentation = "1.12.0"
