[workspace]
members = ["crates/textcase", "crates/textcase-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Pajn/textcase"

[workspace.dependencies]
textcase = { path = "crates/textcase", version = "0.2.0" }
clap = { version = "4.5.39", features = ["cargo", "derive", "wrap_help"] }
flate2 = "1.1.1"
fst = "0.4.7"
icu_casemap = "2.2"
icu_locale_core = "2.2"
memmap2 = "0.9.5"
quick-xml = "0.37.5"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

# `cargo release <level>` bumps both crates in lockstep, commits, tags `vX.Y.Z`,
# and pushes. Publishing is left to CI (release.yml), which triggers on the tag.
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
publish = false
