[package]
name = "textcase-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line tooling for textcase lexicons and plugins"

[[bin]]
name = "textcase"
path = "src/main.rs"

[dependencies]
clap.workspace = true
flate2.workspace = true
fst.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
textcase.workspace = true
zip.workspace = true
