[package]
name = "textcase"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Multilingual sentence/title recasing for Latin-script languages"

[dependencies]
fst.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
