[package]
name = "textcase"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Multilingual sentence/title recasing for Latin-script languages"
readme = "README.md"

[dependencies]
fst.workspace = true
icu_casemap.workspace = true
icu_locale_core.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "casing"
harness = false

[[bench]]
name = "lookup"
harness = false

[[bench]]
name = "plugin_loading"
harness = false

[[bench]]
name = "german"
harness = false
